apps/test/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: test
  labels:
    app: test
spec:
  selector:
    app: test
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
